--- a/DTN_app/config.env
+++ b/DTN_app/config.env
@@ -1,2 +1,2 @@
 PORT = 3000
-MONGO_URI = mongodb+srv://admin:admin@dtn.9lgznyn.mongodb.net/?retryWrites=true&w=majority
+MONGO_URI = mongodb://localhost:27017
